--- a/package.json
+++ b/package.json
@@ -3,13 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
+    "fetch-instagram": "^1.0.0-alpha.3",
+    "geolib": "^2.0.23",
+    "grommet": "^1.6.0",
+    "grommet-css": "^1.6.0",
+    "inodesta": "^1.0.0",
+    "instagram-api": "^1.0.3",
+    "instatype": "^1.0.16",
+    "node-sass-chokidar": "^0.0.3",
+    "npm-run-all": "^4.0.2",
+    "prop-types": "^15.5.10",
+    "query-string": "^5.0.0",
+    "random-coordinates": "^1.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.11"
+    "react-google-maps": "^7.2.0",
+    "react-masonry-component": "^5.0.7",
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.11",
+    "react-spinkit": "^3.0.0",
+    "react-split-pane": "^0.1.66",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
