--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-scripts": "1.0.11",
     "react-spinkit": "^3.0.0",
     "react-split-pane": "^0.1.66",
+    "react-sticky": "^6.0.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
+  "proxy": "http://localhost:4000",
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
