--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "disable-scroll": "^0.3.0",
     "fetch-instagram": "^1.0.0-alpha.3",
     "geolib": "^2.0.23",
-    "grommet": "^1.6.0",
+    "grommet": "1.7.0",
     "grommet-css": "^1.6.0",
     "inodesta": "^1.0.0",
     "instagram-api": "^1.0.3",
