--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,16 @@
 {
   "parser": "babel-eslint",
+  "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "ecmaFeatures": {
+          "jsx": true,
+          "modules": true
+      }
+  },
+  "plugins": [
+    "react"
+  ],
   "env": {
     "browser": true,
     "node": true,
@@ -9,6 +20,10 @@
     "DocumentFragment": true,
     "React"
   },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
   "rules": {
     "indent": [2, 2],
     "valid-jsdoc": 0,
