--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "disable-scroll": "^0.3.0",
+    "eslint-plugin-react": "^7.3.0",
     "fetch-instagram": "^1.0.0-alpha.3",
     "geolib": "^2.0.23",
     "grommet": "1.7.0",
@@ -29,7 +30,8 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "transis": "^0.11.1"
   },
   "proxy": "http://localhost:4000",
   "scripts": {
