better location diversity

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "inodesta": "^1.0.0",
     "instagram-api": "^1.0.3",
     "instatype": "^1.0.16",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.0.2",
     "prop-types": "^15.5.10",
